new swag and fixbug
