# docs/swagger.json
@@ -73,6 +73,11 @@
         },
         "/pub/user/login": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Request for Login",
                 "consumes": [
                     "application/json"
@@ -189,6 +194,23 @@
                 },
                 "message": {
                     "description": "referente a mensagem tratada do erro",
+                    "type": "string"
+                }
+            }
+        },
+        "resource.findByEmailResp": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "permission": {
                     "type": "string"
                 }
             }
